tests/ui/crate_local_distributed_slice/self_referential.stderr
error[E0391]: cycle detected when simplifying constant for the type system `MEOWS`
  --> $DIR/self_referential.rs:4:1
   |
LL | const MEOWS: [&str; _];
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `MEOWS`...
  --> $DIR/self_referential.rs:4:1
   |
LL | const MEOWS: [&str; _];
   | ^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `_`...
  --> $DIR/self_referential.rs:8:1
   |
LL | distributed_slice_element!(MEOWS, MEOWS[0]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `_`...
  --> $DIR/self_referential.rs:8:35
   |
LL | distributed_slice_element!(MEOWS, MEOWS[0]);
   |                                   ^^^^^
   = note: ...which again requires simplifying constant for the type system `MEOWS`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
